🐛 - WIP on the viewport sizing bugs on mobile

--- a/styles/map.css
+++ b/styles/map.css
@@ -3,7 +3,7 @@
   top: 0;
   opacity: 1;
   height: 100vh;
-  height: 100dvh;
+  /* height: 100dvh; */
   width: 100%;
 }
 
