--- a/styles/pinning.css
+++ b/styles/pinning.css
@@ -4,7 +4,7 @@
   position: relative;
   width: 100%;
   min-height: 100vh;
-  min-height: 100dvh;
+  /* min-height: 100dvh; */
 }
 
 .pinned_media > * {
@@ -15,12 +15,12 @@
   position: sticky;
   top: 0;
   height: 100vh;
-  height: 100dvh;
+  /* height: 100dvh; */
 }
 
 .pin_block > *:nth-child(2) {
   margin-top: -100vh;
-  margin-top: -100dvh;
+  /* margin-top: -100dvh; */
 }
 
 .pin_clipped .pinned_media > * {
@@ -47,8 +47,8 @@
 }
 
 .pinned_content {
-  margin-top: 40dvh;
-  margin-bottom: 40dvh;
+  margin-top: 40vh;
+  margin-bottom: 40vh;
   color: white;
   background-color: rgba(0, 0, 0, 0.8);
   padding: var(--space--smallmed);
@@ -91,19 +91,19 @@
   left: 0;
   width: 100%;
   height: 100vh;
-  height: 100dvh;
+  /* height: 100dvh; */
   transition: opacity 0.5s ease-in-out;
 }
 
 .pinned_media video {
   height: 100vh;
-  height: 100dvh;
+  /* height: 100dvh; */
   object-fit: cover;
 }
 
 .pinned_media picture img {
   height: 100vh;
-  height: 100dvh;
+  /* height: 100dvh; */
   object-fit: cover;
   position: absolute;
 }
