--- a/styles/style.css
+++ b/styles/style.css
@@ -228,7 +228,7 @@ body {
 .title_media {
   width: 100%;
   height: 100vh;
-  height: 100dvh;
+  /* height: 100dvh; */
   display: flex;
   overflow: hidden;
   position: relative;
